# Project_RobotWar

./: .gitignore  README.md  ZMQ_rob.py  demoZMQ.py  id_rsa  id_rsa.pub  initial_config.sh  inter_node_copy.py  player2.xml
fastdds_secure_ws/: fastdds_security.repos
fastdds_secure_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
fastdds_secure_ws/log/: latest_build
game_scene/: Survival_scene.ttt  Survival_scene_autogen.ttt
game_scene/game_models/: model_pipe_obstacle.ttm  model_robot_copy.ttm
inter/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
inter/launch/: players_launch.py  rosgame_launch.py
inter/launch/install/: setup.sh
inter/launch/log/: latest_build
inter/log/: latest_build
inter/src/inter_node/: package.xml  setup.cfg  setup.py
keystore/enclaves/: governance.p7s
keystore/enclaves/Robot_1/: cert.pem  key.pem  permissions.p7s  permissions.xml
keystore/enclaves/Robot_2/: cert.pem  key.pem  permissions.p7s  permissions.xml
keystore/enclaves/Robot_3/: cert.pem  key.pem  permissions.p7s  permissions.xml
keystore/enclaves/Robot_4/: cert.pem  key.pem  permissions.p7s  permissions.xml
keystore/enclaves/Robot_5/: cert.pem  key.pem  permissions.p7s  permissions.xml
keystore/enclaves/Robot_6/: cert.pem  key.pem  permissions.p7s  permissions.xml
keystore/enclaves/bridge/: cert.pem  key.pem  permissions.p7s  permissions.xml
keystore/enclaves/player/: cert.pem  (+3 more)
keystore/private/: ca.key.pem
keystore/public/: ca.cert.pem
launch/: cbi.sh  fraud_launch.py  nplayers_launch.py  players_launch.py  rosgame_launch.py
launch/install/: local_setup.sh  setup.zsh
my_project/game_scene/: Survival_scene.ttt  Survival_scene_autogen.ttt  model_ability_block.ttm  model_charging_station.ttm  model_pipe_obstacle (copy).ttm  model_robot.ttm
ros_game_nodes_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_game_nodes_ws/log/: latest_build
ros_game_nodes_ws/src/Bridge_Node/: CMakeLists.txt
ros_game_nodes_ws/src/Bridge_Node/install/: local_setup.sh  setup.sh
ros_game_nodes_ws/src/Bridge_Node/install/rosgame_bridge/share/rosgame_bridge/: package.bash  package.zsh
ros_game_nodes_ws/src/Bridge_Node/launch/: rosgame_bridge_launch.xml
ros_game_nodes_ws/src/Bridge_Node/log/: latest_build
ros_game_nodes_ws/src/Bridge_Node/src/: bridge.cpp  bridge.hpp  main_bridge.cpp
(+201 files in other folders)
